made basic configuration changes

--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Audra Andrew
 
 # Short bio or description (displayed in the header)
-description: Audra's website
+description: Audra Andrew - PhD student UT Arlington
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://avatars1.githubusercontent.com/u/12019676?v=3&s=460
